--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@google-cloud/translate": "^7.0.4",
     "discord.js": "^14.7.1",
     "fs": "^0.0.1-security",
     "path": "^0.12.7",
