--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,14 @@ develop.json
 service.json
 /security
 commands/util/virture_env/security
+/Luticacanard_bot_web
+.DS_Store
+node_modules
+/build
+/.svelte-kit
+/package
+.env
+.env.*
+!.env.example
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
